--- a/orders/src/main/resources/application.yml
+++ b/orders/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  security:
+    user:
+      name: admin
+      password: secret123s
   datasource:
     url: jdbc:postgresql://postgres:5432/ordersdb
     username: postgres_orders_app
@@ -10,6 +14,20 @@ spring:
     properties:
       hibernate:
         format_sql: true
+logging:
+  level:
+    org.springframework.security: DEBUG
+
+springdoc:
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+  api-docs:
+    enabled: true
+
+jwt:
+  secret: "mysupersecurekeythatneedstobeatleast32chars!"
+  expiration: 86400000
 
 server:
   port: 8080
