--- a/orders/src/main/resources/application.yml
+++ b/orders/src/main/resources/application.yml
@@ -1,12 +1,21 @@
 spring:
+  cloud:
+    aws:
+      region:
+        static: us-east-1
+      credentials:
+        access-key:
+        secret-key:
+      s3:
+        bucket:
   security:
     user:
-      name: admin
-      password: secret123s
+      name:
+      password:
   datasource:
-    url: jdbc:postgresql://postgres:5432/ordersdb
-    username: postgres_orders_app
-    password: postgres_password_app
+    url: jdbc:postgresql://postgres:5432/
+    username:
+    password:
   jpa:
     hibernate:
       ddl-auto: update
@@ -16,7 +25,10 @@ spring:
         format_sql: true
 logging:
   level:
-    org.springframework.security: DEBUG
+    root: INFO
+    com.logistic.orders: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n"
 
 springdoc:
   swagger-ui:
@@ -26,8 +38,8 @@ springdoc:
     enabled: true
 
 jwt:
-  secret: "mysupersecurekeythatneedstobeatleast32chars!"
-  expiration: 86400000
+  secret:
+  expiration: 
 
 server:
   port: 8080
