Refactor Docker setup for Spring Boot project
- Moved build and test process inside a multi-stage Docker container
- Deleted old Dockerfile from 'orders/' and placed new Dockerfile in root
- Updated docker-compose.yml to use new build context
- application.yml adjusted to support containerized environment
- Removed unused OrdersApplicationTests.java

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   orders-service:
     build:
-      context: ./orders
+      context: .
       dockerfile: Dockerfile
     container_name: orders_service
     ports:
