--- a/orders/src/main/resources/application.yml
+++ b/orders/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       name:
       password:
   datasource:
-    url: jdbc:postgresql://postgres:5432/
+    url: jdbc:postgresql://postgres:5432/{dbName}
     username:
     password:
   jpa:
@@ -28,7 +28,7 @@ logging:
     root: INFO
     com.logistic.orders: DEBUG
   pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n"
+    console: '%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n'
 
 springdoc:
   swagger-ui:
@@ -39,7 +39,7 @@ springdoc:
 
 jwt:
   secret:
-  expiration: 
+  expiration:
 
 server:
   port: 8080
